# claude-flow-workspace

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  A2A_SETUP.md  CLAUDE.md  CLUSTER_IMPLEMENTATION_REPORT.md  IMPLEMENTACAO-MELHORIAS-MESOP.md  INSIGHTS_AND_IMPROVEMENTS.md  MCP_A2A_INTEGRATION.md  MELHORIAS-INSPIRADAS-MESOP.md  OPTIMIZATION_REPORT.md  RESUMO-MELHORIAS-COMPLETAS.md  config.py  demo-context-flow.js  index-agents-to-neo4j.js  package-lock.json  package.json  populate-a2a-knowledge.js  pyproject.toml  settings.local.json  setup-neo4j-structure.js  setup.sh  test-a2a-flow.js  test-chat.js  test-mcp-a2a-integration.js  test-mcp-rag.js  test-message.json  test-neo4j-connection.js  test-websocket-correto.js  test-websocket.js  test_chat.py  test_service.py  test_ws_a2a.js
.claude/: settings.json  settings.local.json
.cursor/: mcp-config.json
.hive-mind/: config.json
agente-crew-ai/: .env  a2a_server.py  requirements.txt
claude-a2a-wrapper/: .env  package-lock.json  package.json  server.js
clusters/: __init__.py  cluster_dashboard.py  cluster_definition.py  cluster_manager.py  cluster_orchestrator.py  cluster_registry.py  inter_cluster_comm.py  test_clusters.py
common/: __init__.py  agent_factory.py  cache_manager.py  config_manager.py  health_monitor.py  logging_config.py  neo4j_connection_pool.py  telemetry.py  validators.py
config/: __init__.py  unified_config.py
crew-ai/: crew.py  demo_learning_bridge.js  final_documentation.js  main.py  practical_example.py  requirements.txt  system_analysis.md  test_integration.py  view_queries.txt  (+1 more)
(+107 files in other folders)
